# arch-seeder-lib

./: Cargo.toml
src/: error.rs  lib.rs  packages.rs  partitions.rs  system.rs  users.rs
src/bootloader/: grub.rs  mod.rs
src/fs/: mod.rs
src/terminal/: mod.rs  pacman.rs
